--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
+    <title>Agenda de Contatos</title>
 </head>
+
 <body>
-    
+    <h1>Agenda de Contatos</h1>
+    <div id="formulario">
+        <form id="form-contato">
+            <h2> Cadastrar novo contato:</h2>
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required>
+
+            <label for="telefone">Telefone:</label>
+            <input type="tel" id="telefone" name="telefone" required>
+
+            <button type="submit">Cadastrar</button>
+        </form>
+    </div>
+
+    <table id="tabela-contatos">
+        <h3 id="contatos-cadastrados"> Contatos cadastrados:</h3>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Telefone</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Linhas de contato serão adicionadas aqui -->
+        </tbody>
+    </table>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
